# password-manager

./: Cargo.toml  main.py
src/: cli.rs  handlers.rs  main.rs  tui.rs  vault.rs
