[package]
name = "password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
rand = "0.9.2"
aes-gcm = "0.10.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
base64 = "0.22.1"
thiserror = "2.0.17"
passwords = "3.1.16"
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
